# livekit-openai-translate-plugin

./: README.md  pyproject.toml
livekit/plugins/openai_translate/: __init__.py  translation_model.py
