[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-openai-translate"
version = "1.0.0"
description = "LiveKit Agents plugin for OpenAI Realtime Translation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"

authors = [
    { name = "Swayam Hingu" }
]

keywords = [
    "livekit",
    "openai",
    "translation",
    "realtime",
    "voice",
    "audio"
]

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "livekit-agents>=1.6.4",
    "livekit-plugins-openai>=1.6.4",
    "aiohttp>=3.9",
    "openai>=1.0",
]

[project.urls]
Repository = "https://github.com/Swayam-Hingu-PE/livekit-openai-translate-plugin"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
